<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/grey"
    >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/shop_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/radio_button_style"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/shop"
            android:textColor="@drawable/radio_button_text"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/cart_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/radio_button_style"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/cart"
            android:textColor="@drawable/radio_button_text"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/profile_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/radio_button_style"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@drawable/radio_button_text"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="85dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/button"
        android:gravity="center"
        android:text="@string/exit"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/main_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/profile"
        android:textColor="@color/button"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="166dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_label"
        app:srcCompat="@drawable/profile2" />

    <TextView
        android:id="@+id/profile_user_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/UserLogin"
        android:textColor="@color/button"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>